[gd_scene load_steps=35 format=3 uid="uid://bpn1xiwdi5qfe"]

[ext_resource type="Texture2D" uid="uid://c0m616bchurua" path="res://assets/player/player.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://rr7cq3303kqu" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="PackedScene" uid="uid://cv7fop3pcdtob" path="res://scenes/player_cam/player_cam.tscn" id="3_gmlin"]
[ext_resource type="PackedScene" uid="uid://bxllkd3i5gh7k" path="res://scenes/shooter/shooter.tscn" id="4_lvxji"]
[ext_resource type="AudioStream" uid="uid://d4mqebouafpcd" path="res://assets/sound/jump.wav" id="5_p47bc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dovo2"]
radius = 8.0
height = 22.0

[sub_resource type="Animation" id="Animation_lvxji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_0owmy"]
resource_name = "fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_qek5x"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_gmlin"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_75vfm"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_p47bc"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p47bc"]
_data = {
&"RESET": SubResource("Animation_lvxji"),
&"fall": SubResource("Animation_0owmy"),
&"hurt": SubResource("Animation_qek5x"),
&"idle": SubResource("Animation_gmlin"),
&"jump": SubResource("Animation_75vfm"),
&"run": SubResource("Animation_p47bc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gmlin"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lvxji"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p47bc"]
advance_mode = 2
advance_expression = " velocity.y > 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_75vfm"]
advance_mode = 2
advance_expression = "velocity.y < 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5gtgg"]
advance_mode = 2
advance_expression = "int(velocity.y) < 0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_h17s1"]
states/fall/node = SubResource("AnimationNodeAnimation_gmlin")
states/fall/position = Vector2(468, 100.75)
states/jump/node = SubResource("AnimationNodeAnimation_lvxji")
states/jump/position = Vector2(341, 100.375)
transitions = ["jump", "fall", SubResource("AnimationNodeStateMachineTransition_p47bc"), "fall", "jump", SubResource("AnimationNodeStateMachineTransition_75vfm"), "Start", "jump", SubResource("AnimationNodeStateMachineTransition_5gtgg")]
graph_offset = Vector2(-62.4522, -1.28744)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p47bc"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_75vfm"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0owmy"]
advance_mode = 2
advance_expression = "int(velocity.x) != 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qek5x"]
advance_mode = 2
advance_expression = "int(velocity.x) == 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_je7p5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5gtgg"]
states/idle/node = SubResource("AnimationNodeAnimation_p47bc")
states/idle/position = Vector2(338.02, 101.338)
states/run/node = SubResource("AnimationNodeAnimation_75vfm")
states/run/position = Vector2(480.52, 98.3375)
transitions = ["idle", "run", SubResource("AnimationNodeStateMachineTransition_0owmy"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_qek5x"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_je7p5")]
graph_offset = Vector2(-96.48, 23.175)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0owmy"]
animation = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fm80t"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gmlin"]
advance_mode = 2
advance_expression = "!is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lvxji"]
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h17s1"]
advance_mode = 2
advance_expression = "_is_hurt == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gx1jg"]
advance_mode = 2
advance_expression = "_is_hurt == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ugbui"]
advance_mode = 2
advance_expression = "_is_hurt == false"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0owmy"]
states/Air/node = SubResource("AnimationNodeStateMachine_h17s1")
states/Air/position = Vector2(650.455, 88.7888)
states/Grounded/node = SubResource("AnimationNodeStateMachine_5gtgg")
states/Grounded/position = Vector2(430.795, 88.7888)
states/Start/position = Vector2(242, 97.6444)
states/hurt/node = SubResource("AnimationNodeAnimation_0owmy")
states/hurt/position = Vector2(537.475, 194.185)
transitions = ["Start", "Grounded", SubResource("AnimationNodeStateMachineTransition_fm80t"), "Grounded", "Air", SubResource("AnimationNodeStateMachineTransition_gmlin"), "Air", "Grounded", SubResource("AnimationNodeStateMachineTransition_lvxji"), "Grounded", "hurt", SubResource("AnimationNodeStateMachineTransition_h17s1"), "Air", "hurt", SubResource("AnimationNodeStateMachineTransition_gx1jg"), "hurt", "Grounded", SubResource("AnimationNodeStateMachineTransition_ugbui")]
graph_offset = Vector2(-53.5253, 16.185)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmlin"]
size = Vector2(13, 22)

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_dovo2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8afob")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_dovo2")

[node name="PlayerCamera" parent="." instance=ExtResource("3_gmlin")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p47bc")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_0owmy")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -14.0
offset_top = -54.0
offset_right = 288.0
offset_bottom = 371.0
scale = Vector2(0.129012, 0.112834)
theme_override_font_sizes/font_size = 96
text = "0000
00000
0000"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_gmlin")

[node name="Shooter" parent="." instance=ExtResource("4_lvxji")]
speed = 250.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_p47bc")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
